--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -152,6 +152,19 @@ footer {
     height: auto !important;
   }
 
+  #error_explanation {
+    color: #f00;
+    ul {
+      list-style: none;
+      margin: 0 0 18px 0;
+    }
+  }
+
+  .field_with_errors {
+    @extend .control-group;
+    @extend .error;
+  }
+
   /* miscellaneous */
 
   .debug_dump {
